tests/ui/impl-trait/recursive-coroutine-boxed.next.stderr
error[E0282]: type annotations needed for `Pin<Box<T>>`
  --> $DIR/recursive-coroutine-boxed.rs:10:13
   |
LL |         let mut gen = Box::pin(foo());
   |             ^^^^^^^
...
LL |         let mut r = gen.as_mut().resume(());
   |                         ------ type must be known at this point
   |
help: consider giving `gen` an explicit type, where the type for type parameter `T` is specified
   |
LL |         let mut gen: Pin<Box<T>> = Box::pin(foo());
   |                    +++++++++++++

error[E0282]: type annotations needed
  --> $DIR/recursive-coroutine-boxed.rs:10:32
   |
LL |         let mut gen = Box::pin(foo());
   |                                ^^^^^ cannot infer type for opaque type `impl Coroutine<Yield = (), Return = ()>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0282`.
